--- a/index.html
+++ b/index.html
@@ -72,22 +72,57 @@
 <body>
 	<section id="abstract">This specification describes how the command-line utility cargo-specification works.</section>
 
-	<h2>Cargo-specification</h2>
-<p>The main algorithm:</p>
+	<h1>Cargo-specification</h1>
+<p>author: David Wong</p>
+<h2>overview</h2>
 <ol>
 <li>parse command-line arguments</li>
 <li>parse the Specification.toml file</li>
-<li>retrieves the content from all the files listed in the .toml</li>
-<li>figures out the spec format</li>
+<li>retrieve the template</li>
+<li>retrieve the content from all the files listed in the .toml</li>
+<li>render the template</li>
+<li>build the spec</li>
 </ol>
-<h2>TOML Parser</h2>
-<p>A specification is all the concatenated comments from a list of files
-The list of files is maintained by a Specification.toml file.
-Below are the different structures that we use to organize the specification:
-<code>rust/// A specification file contains a specification, as well as sections of (title, text)#[derive(Deserialize, Debug)]pub struct Specification {    /// information about a specification    pub metadata: Metadata,    /// vec of files    pub sections: IndexMap&lt;String, Vec&lt;String&gt;&gt;,}/// Metadata about a specification#[derive(Deserialize, Debug)]pub struct Metadata {    /// Name of the specification    pub name: String,    /// A description    pub description: String,    /// Version of the spec    pub version: Option&lt;String&gt;,    /// Authors, if any    pub authors: Vec&lt;String&gt;,}</code></p>
-<h2>File parser</h2>
+<h2>toml_parser</h2>
+<pre lang="rust"><code>/// A specification file contains a specification, as well as sections of (title, text)
+#[derive(Serialize, Deserialize, Debug)]
+pub struct Specification {
+    /// information about a specification
+    pub metadata: Metadata,
+    /// configuration of the specification
+    pub config: Config,
+    /// files to use for the specification&amp;#39;s content
+    pub sections: HashMap&amp;lt;String, String&amp;gt;,
+}
+
+#[derive(Serialize, Deserialize, Debug)]
+pub struct Config {
+    /// main template file
+    pub template: String,
+}
+
+/// Metadata about a specification
+#[derive(Serialize, Deserialize, Debug)]
+pub struct Metadata {
+    /// Name of the specification
+    pub name: String,
+    /// A description
+    pub description: String,
+    /// Version of the spec
+    pub version: Option&amp;lt;String&amp;gt;,
+    /// Authors, if any
+    pub authors: Vec&amp;lt;String&amp;gt;,
+}
+</code></pre>
+<h2>Parser</h2>
+<p>A specification is all the concatenated comments from a list of files.
+The list of files is maintained by a <code>Specification.toml</code> file.</p>
+<p>Below are the different structures that we use to organize the specification:</p>
+<p>parsing is based on the extension of the file:</p>
 <ul>
 <li>for markdown files, we retrieve the entire content</li>
+<li>for other types of files we look for comments starting with a special <code>delimiter</code>
+(by default <code>~</code>)</li>
 </ul>
 
 
