deploy: b7e095b8ad5ecfb4c5b5297a6df8ffad4d6ccf2d

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ has been pushed to the repository</li>
 <li>build the spec</li>
 </ol>
 <h2>toml_parser</h2>
-<pre lang="rust"><code>/// A specification file contains a specification, as well as sections of (title, text)
+<pre lang="rs"><code>/// A specification file contains a specification, as well as sections of (title, text)
 #[derive(Serialize, Deserialize, Debug)]
 pub struct Specification {
     /// information about a specification
