deploy: 7833c819acdb26256d80b1059b9f0efb55bc4a1f

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ The specification manifest file contains the list of these files.</p>
 <ul>
 <li>for markdown files, we retrieve the entire content</li>
 <li>for python files we look for comments starting with <code>#~</code></li>
-<li>for python files we look for comments starting with <code>#~</code></li>
+<li>for ML files we look for comments starting with <code>#~</code></li>
 <li>for other files we look for comments starting with <code>//~</code></li>
 </ul>
 <p>for each file listed by the specification manifest, we follow these steps:</p>
