deploy: 753644c5d6fc57fde3fcad3a2b3d62863ddae6ca

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
 <li>retrieve the template file</li>
 <li>extract the spec comments from all the files listed using <a href="#comment-parser">comment_parser</a></li>
 <li>render the template</li>
-<li>build the spec. We currently support two different formats:</li>
-</ol>
+<li>build the spec. We currently support two different formats:
 <ul>
 <li><a href="https://daringfireball.net/projects/markdown/">markdown</a></li>
 <li><a href="https://github.com/w3c/respec/">respec</a></li>
 </ul>
+</li>
+</ol>
 <h2>Toml parser</h2>
 <p>The toml parser expects a manifest specification file that follows the following configuration:</p>
 <pre lang="rs"><code>/// A specification file contains a specification, as well as sections of (title, text)
